PythonApp-k8-Ingress-HPA/k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-webapp
  template:
    metadata:
      labels:
        app: python-webapp
    spec:
      containers:
      - name: python-webapp
        image: neeabhishek/talkinglands:v3
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
