PythonApp-k8-Ingress-HPA/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-webapp-svc
  labels:
    app: python-webapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: python-webapp
